# james-tools

./: .gitignore  README.md  compose.yml  rds.html
backend/: Cargo.toml  Dockerfile  _cert.pem  wildcard-self-signed.pem
backend/.sqlx/: query-1df136d3b8226b968df3e3a5146fac0004e4b3970899e46460507327bd1e82ec.json  query-24cf9cf17b5ac3a245edbfeb762c0ab11fee01155a1880efff1268f84a25c36c.json  query-2e9f429365ba6e683abda43178bd32a54c88616765af7eae4f9a8e263fec6a5d.json  query-438a6a9d37a5b103359fcebf422cfc1f8b19cda370e843c3d831e06081f22028.json  query-4e246fe0bfb9385f7d68263d701110086b6055626c0c75253caee2d2b72f5c10.json  query-51638951933f33bbda58cac8db3c4f9964c4e12793a5b2c480fdda2a3f3a9d60.json  query-534f5914792e42c4dbdd01dffc155be8841136890d0b4cfa8ce2515043ef858f.json  query-59a4f4785c94e40957bb9a490c7ded610b1138cba5e929ab7a476f17df743ffd.json  query-5a3a4b9d8da06bc3ab1a26694949e3c3ef512bb2f66218bb134c3ab18137c6e6.json  query-63a6fa527b853d830f00cb45a4b743b61926c0dceb2a6dcb6dad822f0bb77c8a.json  query-65c457cf732538a24671427ea5c2094c23419c1241cbf0d8698e6091edc1bba9.json  query-68031eab8196c637e8501d7f11e7f24e66453406576cca9ec8e71063af432e74.json  query-68dafdee23c06be236ae8c96f3ec82f5f2e8195a7ea8ab29b99c02ad8b62a590.json  query-7222348527c7683572905d1766c979a097907e2de004720e0743daf4725cf940.json  query-797068c720944486c0c27814a2c92aa89d38a9f8aa6479663dee0c2029eae49d.json  query-8e8528cba722600dfb63aa2a9be0c66f755dbce437dd50adf513eccc2795e5a3.json  query-959fed71be839a3ef8c15970bbe36d9267f32862a9bbe0a3f5b5420c1cde51c6.json  (+8 more)
backend/src/: config.rs  error.rs  main.rs
(+58 files in other folders)
