[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlx-macros",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.65"
tokio = "1.41.0"
uuid = { version = "1.11.0", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
futures = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
